--- a/Programacion/KL_APP/src/Vista/vPrincipal.form
+++ b/Programacion/KL_APP/src/Vista/vPrincipal.form
@@ -132,6 +132,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <text value="Iker Unai Z."/>
                 </properties>
               </component>
@@ -141,6 +142,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Equipos"/>
                 </properties>
@@ -151,6 +153,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Partidos"/>
                 </properties>
@@ -161,6 +164,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Clasificacion"/>
                 </properties>
@@ -187,6 +191,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Usuarios"/>
                 </properties>
