--- a/Programacion/KL_APP/src/Vista/vClasificacion.form
+++ b/Programacion/KL_APP/src/Vista/vClasificacion.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="pPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1264" height="400"/>
+      <xy x="20" y="20" width="1326" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -61,6 +61,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <text value="Iker Unai Z."/>
                 </properties>
               </component>
@@ -158,6 +159,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Usuarios"/>
                 </properties>
@@ -168,6 +170,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Clasificacion"/>
                 </properties>
@@ -178,6 +181,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Partidos"/>
                 </properties>
@@ -188,6 +192,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
+                  <foreground color="-1"/>
                   <opaque value="false"/>
                   <text value="Equipos"/>
                 </properties>
