--- a/Programacion/KL_APP/src/Vista/vLogin.form
+++ b/Programacion/KL_APP/src/Vista/vLogin.form
@@ -20,7 +20,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="64bef" class="javax.swing.JLabel">
+          <component id="64bef" class="javax.swing.JLabel" binding="icono">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
