--- a/Programacion/KL_APP/src/Vista/vPartidos.form
+++ b/Programacion/KL_APP/src/Vista/vPartidos.form
@@ -244,11 +244,7 @@
                       </grid>
                     </constraints>
                     <properties>
-                      <model>
-                        <item value="Jornada 1"/>
-                        <item value="Jornada 2"/>
-                        <item value="Jornada 10"/>
-                      </model>
+                      <model/>
                     </properties>
                   </component>
                   <vspacer id="28e5c">
@@ -270,22 +266,15 @@
               </grid>
             </children>
           </grid>
-          <scrollpane id="4e63d" binding="spScroll">
+          <grid id="1f2ea" binding="pPartidos" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children>
-              <grid id="a2861" binding="pPartidos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints/>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </grid>
-            </children>
-          </scrollpane>
+            <children/>
+          </grid>
         </children>
       </grid>
     </children>
