--- a/Programacion/KL_APP/src/Vista/vPerfil.form
+++ b/Programacion/KL_APP/src/Vista/vPerfil.form
@@ -383,7 +383,7 @@
                   <text value="CONTRASEÑA"/>
                 </properties>
               </component>
-              <grid id="c894a" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="c894a" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="800"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -391,16 +391,6 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="f9543" class="javax.swing.JTextField" binding="tfPassVieja">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <minimum-size width="-1" height="35"/>
-                        <preferred-size width="150" height="35"/>
-                        <maximum-size width="-1" height="35"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
                   <component id="7cc86" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
@@ -411,9 +401,35 @@
                       <text value="Antigua Contraseña"/>
                     </properties>
                   </component>
+                  <component id="43592" class="javax.swing.JPasswordField" binding="pfPassVieja">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="35"/>
+                        <preferred-size width="150" height="35"/>
+                        <maximum-size width="-1" height="35"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="46912" class="javax.swing.JButton" binding="bVisibleViejo">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="20" height="25"/>
+                        <preferred-size width="20" height="25"/>
+                        <maximum-size width="20" height="25"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <borderPainted value="false"/>
+                      <contentAreaFilled value="false"/>
+                      <icon value="assets/visible-on.png"/>
+                      <opaque value="false"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
-              <grid id="f51c2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="f51c2" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="800"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -431,7 +447,7 @@
                       <text value="Nueva Contraseña"/>
                     </properties>
                   </component>
-                  <component id="3a17" class="javax.swing.JTextField" binding="pfPassNew">
+                  <component id="cc589" class="javax.swing.JPasswordField" binding="pfPassNew">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <minimum-size width="-1" height="35"/>
@@ -441,9 +457,25 @@
                     </constraints>
                     <properties/>
                   </component>
+                  <component id="fecdf" class="javax.swing.JButton" binding="bVisibleNew">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="20" height="25"/>
+                        <preferred-size width="20" height="25"/>
+                        <maximum-size width="20" height="25"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <borderPainted value="false"/>
+                      <contentAreaFilled value="false"/>
+                      <icon value="assets/visible-on.png"/>
+                      <opaque value="false"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
-              <grid id="540a2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="540a2" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="800"/>
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -451,16 +483,6 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="4fb69" class="javax.swing.JTextField" binding="pfPassNew2">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <minimum-size width="-1" height="35"/>
-                        <preferred-size width="150" height="35"/>
-                        <maximum-size width="-1" height="35"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
                   <component id="c9cc0" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
@@ -469,6 +491,32 @@
                       <font name="Arial Black" size="14" style="1"/>
                       <foreground color="-12828863"/>
                       <text value="Repetir Contraseña"/>
+                    </properties>
+                  </component>
+                  <component id="2f17f" class="javax.swing.JPasswordField" binding="pfPassNew2">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="35"/>
+                        <preferred-size width="150" height="35"/>
+                        <maximum-size width="-1" height="35"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="c5b5a" class="javax.swing.JButton" binding="bVisibleNew2">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="20" height="25"/>
+                        <preferred-size width="20" height="25"/>
+                        <maximum-size width="20" height="25"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <borderPainted value="false"/>
+                      <contentAreaFilled value="false"/>
+                      <icon value="assets/visible-on.png"/>
+                      <opaque value="false"/>
+                      <text value=""/>
                     </properties>
                   </component>
                 </children>
