--- a/Programacion/KL_APP/src/Vista/vPerfil.form
+++ b/Programacion/KL_APP/src/Vista/vPerfil.form
@@ -333,7 +333,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="59e7d" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="59e7d" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="800"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -359,6 +359,24 @@
                       <font name="Arial Black" size="14" style="1"/>
                       <foreground color="-12828863"/>
                       <text value="Email"/>
+                    </properties>
+                  </component>
+                  <component id="c34ed" class="javax.swing.JButton" binding="bGuardarCambios1">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="5" fill="0" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="40"/>
+                        <preferred-size width="-1" height="40"/>
+                        <maximum-size width="-1" height="40"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <actionCommand value=""/>
+                      <background color="-1488097"/>
+                      <contentAreaFilled value="false"/>
+                      <font name="Arial Black" style="1"/>
+                      <foreground color="-1488097"/>
+                      <label value="GUARDAR CAMBIOS"/>
+                      <text value="GUARDAR CAMBIOS"/>
                     </properties>
                   </component>
                 </children>
