--- a/Programacion/KL_APP/src/Vista/CRUDUsuario/dBorrarUsuario.form
+++ b/Programacion/KL_APP/src/Vista/CRUDUsuario/dBorrarUsuario.form
@@ -62,7 +62,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Borrar"/>
+              <text value="Username"/>
             </properties>
           </component>
           <component id="3cc47" class="javax.swing.JTextField" binding="tfUsername">
